test/fixtures/configs/elements/remove/fail/auth.js
exports.notOwner = {
  url: '/users/2/projects/3/pages/7/elements/10',
  method: 'delete',
  headers: {
    authorization: 'token userToken'
  }
};
